--- a/summer school.Rmd
+++ b/summer school.Rmd
@@ -2,7 +2,7 @@
 title: "R summer school"
 output: html_document
 ---
-
+PRIVIET
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
